# homeops

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
backlog/: config.yml
backlog/tasks/: task-1 - Add-host_service-primitive-git-managed-systemd-services.md
examples/: homeops.ncl  homeops.yaml
src/: backup.rs  caddy.rs  config.rs  databases.rs  docker.rs  doctor.rs  git.rs  host_service.rs  main.rs  proc.rs  reconcile.rs  serve.rs  state.rs  storage.rs  systemd.rs
