[package]
name = "homeops"
version = "0.1.0"
edition = "2021"
description = "Single-server GitOps runner for personal/self-hosted servers"
license = "MIT"
repository = "https://github.com/machado2/homeops"
readme = "README.md"

[[bin]]
name = "homeops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nickel-lang-core = "0.18"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

[profile.release]
strip = true
lto = "thin"
